Fixed page flicker bug on initial page load.

--- a/stylesheet/mainCss.scss
+++ b/stylesheet/mainCss.scss
@@ -57,6 +57,11 @@ html{
   background-size: auto;
 }
 
+header, main, footer{
+  visibility: hidden;
+}
+
+
 main {
   max-width: 100%;
   padding-left: 200px;
